Додала wrapper на всі картки проєктів

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,12 +102,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/1-website-technocrack.jpg"
                   alt="Веб-сайт Технокряк"
                   width="370"
                   height="294"
                 />
+                <p class="projects-top-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title">Технокряк</h3>
                   <p class="projects-page-text">Веб-сайт</p>
@@ -121,12 +128,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/2-design-poster.jpg"
                   alt="Дизайн постера"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title">
                     Постер
@@ -143,12 +157,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/3-app-restaurant.jpg"
                   alt="Приложение ресторана"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title">
                     Ресторан
@@ -165,12 +186,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/4-marketing-project-prime.jpg"
                   alt="Маркетинг пректа"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title">
                     Проект
@@ -187,12 +215,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/5-app-project-boxes.jpg"
                   alt="Приложение проекта"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title">
                     Проект
@@ -209,12 +244,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/6-website-inspiration.jpg"
                   alt="Веб-сайт Натхнення"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title" lang="en">
                     Inspiration has no Borders
@@ -230,12 +272,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/7-design-editions.jpg"
                   alt="Дизайн Издания"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title">
                     Издание
@@ -252,12 +301,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/8-marketing-project-lab.jpg"
                   alt="Маркетинг проекта"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title">
                     Проект
@@ -274,12 +330,19 @@
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
+                <div class="projects-top-wrapper">
                 <img
                   src="./images/9-app-growing-business.jpg"
                   alt="Приложение для роста бизнеса"
                   width="370"
                   height="294"
                 />
+                  <p class="projects-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-item-bottom">
                   <h3 class="projects-page-title" lang="en">
                     Growing Business
