--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 height="294"
                 width="370"
               />
+                <p class="about-item-text">Десктопные приложения</p>
             </li>
             <li class="about-item">
               <img
@@ -152,6 +153,7 @@
                 height="294"
                 width="370"
               />
+              <p class="about-item-text">Мобильные приложения</p>
             </li>
             <li class="about-item">
               <img
@@ -160,6 +162,7 @@
                 height="294"
                 width="370"
               />
+              <p class="about-item-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
